changes for itinerary, included some fixes for previous modules which will be implement at later sprint, fixed spacing, parallax, created new components and modules.

--- a/tourismaustralia-styleguide/assets/scss/site/_layout.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/_layout.scss
@@ -628,6 +628,10 @@ $footerBackgroundColour: #0a334c;
 
 .l-padding-b {
   padding-bottom: pxtoem($bottom-spacing);
+
+  @include breakpoint(md) {
+    padding-bottom: pxtoem($bottom-spacing-double);
+  }
 }
 
 .l-float-left {
@@ -650,7 +654,6 @@ $footerBackgroundColour: #0a334c;
 #main-content {
 	position: relative;
   overflow: hidden;
-  background: #fff;
 }
 
 #main-footer {
